examples/mutability.rvn
// variables are immutable by default
i32 a = 10;
a = 20;        // error

// mutable binding
mut i32 b = 10;
b = 20;        // ok

// mutability applies to the binding, not the type
i32 c = 5;
mut i32 d = c;
d = 6;         // ok

// This rule applies to all variable bindings in the language.
